[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-nasa"
version = "0.1.0"
description = "NASA Mission Control integration for Unfolded Circle Remote"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "ucapi>=0.31.0",
    "aiohttp>=3.8.0",
    "certifi>=2022.12.7"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "pytest-asyncio"
]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-nasa"
"Bug Reports" = "https://github.com/mase1981/uc-intg-nasa/issues"
"Source" = "https://github.com/mase1981/uc-intg-nasa"

[tool.setuptools.packages.find]
where = ["."]
include = ["uc_intg_nasa*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120